<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_habits"
        android:icon="@drawable/ic_habits"
        android:title="@string/title_habits" />
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add_habit"
        android:title="@string/title_add_habit" />
    <item
        android:id="@+id/nav_tracker"
        android:icon="@drawable/ic_tracker"
        android:title="@string/title_tracker" />
    <item
        android:id="@+id/nav_ai_insights"
        android:icon="@drawable/ic_ai"
        android:title="@string/title_ai_insights" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>
